--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -8,10 +8,10 @@
 			<div class="box-element product">
 				<h6><strong>{{product.name}}</strong></h6>
 				<hr>
-
-				<button data-product="{{product.id}}" data-action="add" class="btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
+				<h6>Tipo: <strong>{{product.type}}</strong></h6>
+				<button data-product="{{product.id}}" data-action="add" class="btn btn-outline-secondary add-btn update-cart">Añadir al carrito</button>
 				
-				<a class="btn btn-outline-success" href="#">View</a>
+				<a class="btn btn-outline-success" href="#">Ver</a>
 				<h4 style="display: inline-block; float: right"><strong>${{product.price}}</strong></h4>
 
 			</div>
