--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -9,6 +9,9 @@
 				<h6><strong>{{product.name}}</strong></h6>
 				<hr>
 				<h6>Tipo: <strong>{{product.type}}</strong></h6>
+				<hr>
+				<h6>Fabricante: <strong>{{product.maker}}</strong></h6>
+				<hr>
 				<button data-product="{{product.id}}" data-action="add" class="btn btn-outline-secondary add-btn update-cart">Añadir al carrito</button>
 				
 				<a class="btn btn-outline-success" href="#">Ver</a>
