--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -4,6 +4,7 @@
     <div class="row">
         <form method="get">
             <select name="product_type" onchange="this.form.submit()">
+				<option value="all" {% if request.GET.product_type == "all" %}selected{% endif %}>Todos</option>
 				<option value="Cuadro" {% if request.GET.product_type == "Cuadro" %}selected{% endif %}>Cuadro</option>
 				<option value="Manillar" {% if request.GET.product_type == "Manillar" %}selected{% endif %}>Manillar</option>
 				<option value="Sillin" {% if request.GET.product_type == "Sillin" %}selected{% endif %}>Sillin</option>
