ADICIÓN: Búsqueda, Filtrado por Tipo y Filtrado por Marca. \n Nueva Sección 'Catálogo' separado de Tienda (desde Tienda se accederá a las secciones de /<type>... por tipo de producto)

--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -74,7 +74,9 @@
 	      <li class="nav-item active">
 	        <a class="nav-link" href="{% url 'store' %}">Tienda <span class="sr-only">(current)</span></a>
 	      </li>
-	 
+		  <li class="nav-item active">
+	        <a class="nav-link" href="{% url 'catalog' %}">Catálogo <span class="sr-only">(current)</span></a>
+	      </li>
 	    </ul>
 	    <div class="form-inline my-2 my-lg-0">
 	     	<a href="#"class="btn btn-warning">Iniciar Sesión</a>
