Traducción del modulo de usuarios

--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -2,17 +2,16 @@
 {% block title %} Home Page {% endblock title%}
 {% block content %}
     <div class="jumbotron">
-        <h1 class="display-4">Welcome, {{user.first_name.title|default:'Guest'}}</h1>
+        <h1 class="display-4">Bienvenido, {{user.first_name.title|default:'actualmente no tienes la sesión iniciada.'}}</h1>
         <p class="lead">
-            This is <b>user registration and login system</b> build with django which is
-            a Python-based free and open-source web framework that follows the model–template–views architectural pattern.
+            Aquí podrás crear  una nueva cuenta, iniciar sesión, recuperar tu contraseña y modificar tu perfil.
         </p>
         <hr class="my-4">
         <p class="lead">
             {% if user.is_authenticated %}
-                <a class="btn btn-primary btn-lg" href="{% url 'logout' %}" role="button">Logout</a>
+                <a class="btn btn-primary btn-lg" href="{% url 'logout' %}" role="button">Cerrar sesión</a>
             {% else %}
-                <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">Sign in</a>
+                <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">Iniciar sesión</a>
             {% endif %}
         </p>
     </div>
