--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -5,7 +5,7 @@
             <div class="col-lg-5">
                 <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
                     <div class="alert alert-info">
-                        Your password has been set. You may go ahead and <a href="{% url 'login' %}">Login Here</a>
+                        Se ha actualizado tu contraseña. Ya puedes volver a usar la aplicación, para ello <a href="{% url 'login' %}">Inicia sesión aquí</a>
                     </div>
                 </div>
             </div>
