--- a/users/templates/users/admin.html
+++ b/users/templates/users/admin.html
@@ -32,10 +32,10 @@
                         <img class="rounded-circle account-img" src="{{ i.avatar.url }} " style="cursor: pointer;"/>
                     </td>
                     <td>
-                        <a href="edit/{{i.user.username}}" class="btn btn-success">Edit</button>
+                        <a href="edit/{{i.user.username}}" class="btn btn-success">Editar</button>
                     </td>
                     <td>
-                        <a href="delete/{{i.user.username}}" class="btn btn-danger">Delete</button>
+                        <a href="delete/{{i.user.username}}" class="btn btn-danger">Eliminar</button>
                     </td>
                 </tr>
                 {% endfor %}
