--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -18,17 +18,17 @@
     <div class="row">
       <div class="col-md-12">
         <nav class="navbar navbar-expand-md navbar-light " style="background-color: #f0f5f5">
-          <a href="/" class="navbar-brand">Home</a>
+          <a href="/" class="navbar-brand">Inicio</a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
                   {% if user.is_authenticated %}
-                    <a href="{% url 'users-profile' %}" class="nav-item nav-link">Profile</a>
-                    <a href="{% url 'logout' %}" class="nav-item nav-link">Logout</a>
+                    <a href="{% url 'users-profile' %}" class="nav-item nav-link">Mi perfil</a>
+                    <a href="{% url 'logout' %}" class="nav-item nav-link">Cerrar sesión</a>
                   {% else %}
-                    <a href="{% url 'login' %}" class="nav-item nav-link">Sign in</a>
+                    <a href="{% url 'login' %}" class="nav-item nav-link">Iniciar sesión</a>
                   {% endif %}
 
                 </div>
