--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,5 +1,5 @@
 {% extends "users/base.html" %}
-{% block title %} Login Page {% endblock title%}
+{% block title %} Iniciar sesión {% endblock title%}
 {% block content %}
     <div class="form-content my-3 p-3">
         <div class="container">
@@ -7,7 +7,7 @@
                 <div class="col-lg-5">
                     <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
                         <div class="card-header justify-content-center">
-                          <h3 class="font-weight-light my-1 text-center">Sign In</h3>
+                          <h3 class="font-weight-light my-1 text-center">Iniciar sesión</h3>
                         </div>
                         {% if form.errors %}
                             <div class="alert alert-danger alert-dismissible" role="alert">
@@ -27,7 +27,7 @@
                                 <div class="form-row">
                                     <div class="col-md-10 offset-md-1">
                                         <div class="form-group">
-                                            <label class="small mb-1">Username</label>
+                                            <label class="small mb-1">Usuario</label>
                                             {{ form.username }}
                                         </div>
                                     </div>
@@ -35,7 +35,7 @@
                                 <div class="form-row">
                                     <div class="col-md-10 offset-md-1">
                                         <div class="form-group">
-                                          <label class="small mb-1">Password</label>
+                                          <label class="small mb-1">Contraseña</label>
                                           {{ form.password }}
                                         </div>
                                     </div>
@@ -45,14 +45,14 @@
                                         <div class="form-group">
                                             <!-- Add a Remember me functionality -->
                                             {{ form.remember_me }}
-                                            <label> Remember me</label>
+                                            <label> Recuerdame</label>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-row">
                                     <div class="col-md-10 offset-md-1">
                                         <div class="form-group mt-0 mb-1">
-                                          <button name="login" class="col-md-12 btn btn-dark" id="login">Sign in</button>
+                                          <button name="login" class="col-md-12 btn btn-dark" id="login">Iniciar sesión</button>
                                         </div>
                                     </div>
                                 </div>
@@ -60,8 +60,8 @@
                         </div>
                         <div class="card-footer text-center">
                             <div class="small">
-                                <a href="{% url 'users-register' %}">Don't have an account yet? Go to signup</a><br>
-                                <a href="{% url 'password_reset' %}"><i>Forgot Password?</i></a>
+                                <a href="{% url 'users-register' %}">¿No tienes una cuenta? Ve a Registro</a><br>
+                                <a href="{% url 'password_reset' %}"><i>¿No recuerda su contraseña?</i></a>
                             </div>
                         </div>
                     </div>
