--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,13 +1,16 @@
 {% extends "users/base.html" %}
-{% block title %}Logout{% endblock title %}
+{% block title %}Cerrar sesión{% endblock title %}
 {% block content %}
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-        <h5 class="card-title">You have been logged out</h5>
-        <p class="card-text">
-            Thanks for your time, contact me for any comments or suggestions using my email address.
-        </p>
-        <br><hr><a href="{% url 'login' %}" class="btn btn-primary">Sign in again</a>
+    <hr>
+    <div class="container d-flex justify-content-center align-items-center vh-100">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body text-center">
+                <h5 class="card-title">Se ha cerrado la sesión</h5>
+                <p class="card-text">
+                    Muchas gracias por usar la aplicación. Esperamos que vuelvas pronto.
+                </p>
+                <br><hr><a href="{% url 'login' %}" class="btn btn-primary">Iniciar sesión de nuevo</a>
+            </div>
         </div>
     </div>
 
