--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -7,7 +7,7 @@
                     <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
                         <div class="card-header justify-content-center">
                         	<div id="error_div"></div>
-                          <h3 class="font-weight-light my-4 text-center">Forgot Password?</h3>
+                          <h3 class="font-weight-light my-4 text-center">¿No recuerdas tu contraseña?</h3>
                         </div>
                         {% if form.errors %}
                             <div class="alert alert-danger alert-dismissible" role="alert">
@@ -30,14 +30,14 @@
                                       <label class="small mb-1" for="id_email">Email</label>
                                         <input type="email" name="email"  class="form-control"
                                                autocomplete="email" maxlength="254" required id="id_email"
-                                               placeholder="Enter email">
+                                               placeholder="Introduce tu email">
                                     </div>
                                 </div>
                             </div>
                                 <div class="form-row">
                                   <div class="col-md-10 offset-md-1">
                                     <div class="form-group mt-0 mb-1">
-                                        <button type="submit" class="col-md-12 btn btn-dark">Submit
+                                        <button type="submit" class="col-md-12 btn btn-dark">Enviar
                                         </button>
                                     </div>
                                  </div>
@@ -46,8 +46,8 @@
                         </div>
                         <div class="card-footer text-center">
                             <div class="small">
-                                <a href="{% url 'users-register' %}">Create A New Account</a><br><br>
-                                <a href="{% url 'login' %}">Back To Login</a><br>
+                                <a href="{% url 'users-register' %}">Crear una nueva cuenta</a><br><br>
+                                <a href="{% url 'login' %}">Volver a Iniciar sesión</a><br>
                             </div>
                         </div>
                     </div>
