--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,5 +1,5 @@
 {% extends "users/base.html" %}
-{% block title %}Profile Page{% endblock title %}
+{% block title %}Perfil{% endblock title %}
 {% block content %}
     <div class="row my-3 p-3">
         <img class="rounded-circle account-img" src="{{ user.profile.avatar.url }} " style="cursor: pointer;"/>
@@ -22,23 +22,23 @@
             <div class="form-row">
                 <div class="col-md-5">
                     <div class="form-group">
-                        <label class="small mb-1">Username:</label>
+                        <label class="small mb-1">Usuario:</label>
                             {{ user_form.username }}
                         <label class="small mb-1">Email:</label>
                             {{ user_form.email }}
                     </div>
                     <div class="form-group">
-                        <a href="{% url 'password_change' %}">Change Password</a>
+                        <a href="{% url 'password_change' %}">Cambiar contraseña</a>
                         <hr>
-                        <label class="small mb-1">Change Avatar:</label>
+                        <label class="small mb-1">Cambiar imagen de perfil:</label>
                         {{ profile_form.avatar }}
                     </div>
-                    <label class="small mb-1">Bio:</label> {{ profile_form.bio }}
+                    <label class="small mb-1">Biografía:</label> {{ profile_form.bio }}
                 </div>
             </div>
             <br><br>
-            <button type="submit" class="btn btn-dark btn-lg">Save Changes</button>
-            <button type="reset" class="btn btn-dark btn-lg">Reset</button>
+            <button type="submit" class="btn btn-dark btn-lg">Guardar cambios</button>
+            <button type="reset" class="btn btn-dark btn-lg">Cancelar cambios</button>
         </form>
     </div>
 {% endblock content %}
