Actualizado con la recuperación de correo  electronico.

--- a/users/templates/users/password_reset_email.html
+++ b/users/templates/users/password_reset_email.html
@@ -1,12 +1,9 @@
 {% autoescape off %}
-  To initiate the password reset process for your {{ user.email }} Django Registration/Login App Account,
-  click the link below:
+  Para crear una nueva contraseña para tu usuario: {{ user.email }} debes hacer click en el siguiente enlace:
 
   {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
-  If clicking the link above doesn't work, please copy and paste the URL in a new browser
-  window instead.
+  Si no está funcionando, por favor ponte en contacto con el administrador de la página.
 
-  Sincerely,
-  The Developer
+  Grupo 3.6 de PGPI.
 {% endautoescape %}
