--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -2,18 +2,27 @@
 {% load static %}
 {% block content %}
      <div class="row">
-		<div class="col-lg-6">
-			<div class="box-element" id="form-wrapper">
-				<form id="form">
-					<div id="user-info">
-						<div class="form-field">
-							<input required class="form-control" type="text" name="name" placeholder="Name..">
-						</div>
-						<div class="form-field">
-							<input required class="form-control" type="email" name="email" placeholder="Email..">
-						</div>
+        <div class="col-lg-6">
+            <div class="box-element" id="form-wrapper">
+                <form id="form">
+                    <div id="user-info">
+                        <div class="form-field">
+                            <input required class="form-control" type="text" name="name" placeholder="Name..">
+                        </div>
+                        <div class="form-field">
+                            <input required class="form-control" type="email" name="email" placeholder="Email..">
+                        </div>
+                    </div>
+
+					<div class="form-field">
+						<label for="delivery_option">Delivery Option:</label>
+						<select id="delivery_option" name="delivery_option">
+							<option value="">Select a delivery option</option>
+							<option value="store_pickup">Store Pickup</option>
+							<option value="home_delivery">Home Delivery</option>
+						</select>
 					</div>
-					
+
 					<div id="shipping-info">
 						<hr>
 						<p>Shipping Information:</p>
@@ -43,7 +52,7 @@
 			<br>
 			<div class="box-element hidden" id="payment-info">
 				<small>Paypal Options</small>
-				<!--<button id="make-payment">Make payment</button>-->
+				<button id="make-payment">Make payment</button>
 				<div id="paypal-button-container"></div>
 			</div>
 			
@@ -73,6 +82,13 @@
 
 	<script>
 		var total = '{{order.get_cart_total}}'
+		var makePaymentButton = document.getElementById('make-payment');
+		// Deshabilita el botón de pago si el total es 0 o menor
+		if (parseFloat(total) <= 0) {
+			makePaymentButton.disabled = true;
+		}
+
+
         // Render the PayPal button into #paypal-button-container
         paypal.Buttons({
 
@@ -105,7 +121,19 @@
 
 	<script type="text/javascript">
 		var shipping = '{{order.shipping}}'
+		var user = '{{user}}'
+	
+		var deliveryOption = document.getElementById('delivery_option');
+		var shippingInfo = document.getElementById('shipping-info');
 
+		deliveryOption.addEventListener('change', function() {
+			if (this.value == 'home_delivery') {
+				shippingInfo.style.display = 'block';
+			} else {
+				shippingInfo.style.display = 'none';
+			}
+		});
+	
 		if (shipping == 'False'){
 		 	document.getElementById('shipping-info').innerHTML = ''
 		}
@@ -129,11 +157,15 @@
 	    	document.getElementById('payment-info').classList.remove("hidden");
 	    })
 
-		/*
-	    document.getElementById('make-payment').addEventListener('click', function(e){
-	    	submitFormData()
-	    })
-	    */
+		
+		document.getElementById('make-payment').addEventListener('click', function(e){
+			if (parseFloat(total) > 0) {
+				submitFormData();
+			} else {
+				alert('Total must be greater than 0 to make a payment');
+			}
+		}) 
+	    
 
 	    function submitFormData(){
 	    	console.log('Payment button clicked')
@@ -190,6 +222,3 @@
 	    }
 	</script>
 {% endblock content %}
-
-
- 
