--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -5,16 +5,16 @@
 		<div class="col-lg-12">
 			<div class="box-element">
 
-				<a  class="btn btn-outline-dark" href="{% url 'store' %}">&#x2190; Continue Shopping</a>
+				<a  class="btn btn-outline-dark" href="{% url 'store' %}">&#x2190; Seguir comprando</a>
 
 				<br>
 				<br>
 				<table class="table">
 					<tr>
-						<th><h5>Items: <strong>{{order.get_cart_items}}</strong></h5></th>
+						<th><h5>Artículos: <strong>{{order.get_cart_items}}</strong></h5></th>
 						<th><h5>Total:<strong> ${{order.get_cart_total|floatformat:2}}</strong></h5></th>
 						<th>
-							<a  style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkout' %}">Checkout</a>
+							<a  style="float:right; margin:5px;" class="btn btn-success" href="{% url 'checkout' %}">Continuar</a>
 						</th>
 					</tr>
 				</table>
@@ -25,9 +25,9 @@
 			<div class="box-element">
 				<div class="cart-row">
 					<div style="flex:2"></div>
-					<div style="flex:2"><strong>Item</strong></div>
-					<div style="flex:1"><strong>Price</strong></div>
-					<div style="flex:1"><strong>Quantity</strong></div>
+					<div style="flex:2"><strong>Artículo</strong></div>
+					<div style="flex:1"><strong>Precio</strong></div>
+					<div style="flex:1"><strong>Cantidad</strong></div>
 					<div style="flex:1"><strong>Total</strong></div>
 				</div>
 				{% for item in items %}
