--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -64,7 +64,7 @@
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="{% url 'store' %}">Grupo 3.6</a>
+	  <a class="navbar-brand" href="{% url 'catalog' %}">Grupo 3.6</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -72,14 +72,44 @@
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	    <ul class="navbar-nav mr-auto">
 	      <li class="nav-item active">
-	        <a class="nav-link" href="{% url 'store' %}">Tienda <span class="sr-only">(current)</span></a>
-	      </li>
-		  <li class="nav-item active">
 	        <a class="nav-link" href="{% url 'catalog' %}">Catálogo <span class="sr-only">(current)</span></a>
 	      </li>
+		  <li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				Productos
+			</a>
+			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+				<a class="dropdown-item" href="/store/?product_type=Cuadro">Cuadros</a>
+				<a class="dropdown-item" href="/store/?product_type=Manillar">Manillares</a>
+				<a class="dropdown-item" href="/store/?product_type=Sillin">Sillines</a>
+				<a class="dropdown-item" href="/store/?product_type=Rueda">Ruedas</a>
+				<a class="dropdown-item" href="/store/?product_type=Freno">Frenos</a>
+				<a class="dropdown-item" href="/store/?product_type=Pedal">Pedales</a>
+				<a class="dropdown-item" href="/store/?product_type=Cambios">Cambios</a>
+			</div>
+		  </li>
+		  <li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				Fabricantes
+			</a>
+			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+				<a class="dropdown-item" href="/store/?maker=Berria">Berria</a>
+				<a class="dropdown-item" href="/store/?maker=BH">BH</a>
+				<a class="dropdown-item" href="/store/?maker=CBK">CBK</a>
+				<a class="dropdown-item" href="/store/?maker=Goka">Goka</a>
+				<a class="dropdown-item" href="/store/?maker=Massi">Massi</a>
+				<a class="dropdown-item" href="/store/?maker=Megamo">Megamo</a>
+				<a class="dropdown-item" href="/store/?maker=MMR+">MMR</a>
+				<a class="dropdown-item" href="/store/?maker=Monty">Monty</a>
+				<a class="dropdown-item" href="/store/?maker=MSC">MSC</a>
+				<a class="dropdown-item" href="/store/?maker=Orbea">Orbea</a>
+				<a class="dropdown-item" href="/store/?maker=Vitoria">Vitoria</a>
+				<a class="dropdown-item" href="/store/?maker=Unno">Unno</a>
+			</div>
+		  </li>
 		  {% if user.is_staff %}
 		  <li class="nav-item">
-			  <a class="nav-link" href="{% url 'guest_orders' %}">All Orders</a>
+			  <a class="nav-link" href="{% url 'guest_orders' %}">Todos los pedidos</a>
 		  </li>
 	 	 {% endif %}
 
