--- a/store/templates/store/store_main.html
+++ b/store/templates/store/store_main.html
@@ -13,7 +13,7 @@
                     <h6>Fabricante: <strong>{{product.maker}}</strong></h6>
                     <hr>
                     <button data-product="{{product.id}}" data-action="add" class="btn btn-outline-secondary add-btn update-cart">Añadir al carrito</button>
-                        <h4 style="display: inline-block; float: right"><strong>${{product.price}}€</strong></h4>
+                        <h4 style="display: inline-block; float: right"><strong>{{product.price}}€</strong></h4>
                 </div>
             </div>
         {% endfor %}
