--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -49,7 +49,7 @@
                     <hr>
                     <h6>Fabricante: <strong>{{product.maker}}</strong></h6>
                     <hr>
-                    <button data-product="{{product.id}}" data-action="add" class="btn btn-outline-secondary add-btn update-cart">Añadir al carrito</button>
+                    <button data-product="{{product.id}}" data-action="add" data-url="{% url 'update_item' %}" class="btn btn-outline-secondary add-btn update-cart">Añadir al carrito</button>
                         <h4 style="display: inline-block; float: right"><strong>{{product.price}}€</strong></h4>
                 </div>
             </div>
