--- a/claims/templates/claims/claim_create.html
+++ b/claims/templates/claims/claim_create.html
@@ -5,9 +5,12 @@
   <form method="POST">
     {% csrf_token %}
     <label for="title">Título:</label>
-    <input id="title" type="text" name="title" required>
+    <input class="form-control requiredField Highlighted-label" id="title" type="text" name="title"  required>
+    <br>
     <label for="description">Descripción:</label>
-    <textarea id="description" name="description" required></textarea>
-    <input type="submit" value="Enviar reclamación">
+    <textarea class="form-control requiredField Highlighted-label" id="description" name="description" required></textarea>
+    <br>
+    <input  class="btn btn-dark" type="submit" value="Enviar reclamación">
+    <a class="btn btn-dark" href="/claims/claims/">Cancelar</a>
   </form>
 {% endblock %}
