--- a/claims/templates/claims/claim_delete.html
+++ b/claims/templates/claims/claim_delete.html
@@ -1,11 +1,17 @@
 {% extends 'claims/base_generic.html' %}
 
 {% block content %}
-  <h1>Eliminar reclamación</h1>
-  <p>¿Estas seguro de que quieres eliminar la reclamación:"{{ claim.title }}"?</p>
-  <form method="POST">
-    {% csrf_token %}
-    <input type="submit" value="Sí, eliminar">
-  </form>
-  <a href="{% url 'claim_detail' claim.id %}">No, volver</a>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <h1 class="display-4">Eliminar reclamación</h1>
+      <p>¿Estás seguro de que quieres eliminar la reclamación "<span style="color: red;">{{ claim.title }}</span>"?</p>
+      <form method="POST">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-danger">Sí, eliminar</button>
+      </form>
+      <a href="{% url 'claim_detail' claim.id %}" class="btn btn-dark mt-2">No, volver</a>
+    </div>
+  </div>
+</div>
 {% endblock %}
