--- a/claims/templates/claims/base_generic.html
+++ b/claims/templates/claims/base_generic.html
@@ -22,7 +22,7 @@
   
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="{% url 'store' %}">Grupo 3.6</a>
+          <a class="navbar-brand" href="{% url 'store' %}">BicicletasMondongo</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -126,6 +126,27 @@
 
     <!-- A plugin for password show/hide  -->
     <script src="https://unpkg.com/bootstrap-show-password@1.2.1/dist/bootstrap-show-password.min.js"></script>
-
+    <footer class="footer bg-dark text-white mt-5 py-4">
+      <div class="container">
+        <div class="row align-items-center">
+        <div class="col-md-4">
+        
+          <h5 class="mt-0 mb-0 ml-3 text-white">BicicletasMondongo</h5>
+        </div>
+        <div class="col-md-4 align-self-center">
+          <ul class="list-unstyled mb-0">
+          <li><a href="{% url 'terms_of_use' %}" class="text-white text-decoration-none">Términos de uso y políticas de privacidad</a></li>
+          <!-- Otros enlaces a términos y condiciones -->
+          </ul>
+        </div>
+        <div class="col-md-4 align-self-center">
+          <ul class="list-unstyled mb-0">
+            <li><a href="{% url 'contact' %}" class="text-white text-decoration-none">Contacto</a></li>
+          <!-- Otros enlaces de contacto -->
+          </ul>
+        </div>
+        </div>
+      </div>
+      </footer>
 </body>
 </html>
