--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -65,7 +65,7 @@
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="{% url 'catalog' %}">Grupo 3.6</a>
+	  <a class="navbar-brand" href="{% url 'catalog' %}">BicicletasMondongo</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -164,5 +164,29 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 	<script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
+	
+	<footer class="footer bg-dark text-white mt-5 py-4">
+		<div class="container">
+		  <div class="row align-items-center">
+			<div class="col-md-4">
+			
+			  <h5 class="mt-0 mb-0 ml-3 text-white">BicicletasMondongo</h5>
+			</div>
+			<div class="col-md-4 align-self-center">
+			  <ul class="list-unstyled mb-0">
+				<li><a href="{% url 'terms_of_use' %}" class="text-white text-decoration-none">Términos de uso y políticas de privacidad</a></li>
+				<!-- Otros enlaces a términos y condiciones -->
+			  </ul>
+			</div>
+			<div class="col-md-4 align-self-center">
+			  <ul class="list-unstyled mb-0">
+				<li><a href="{% url 'contact' %}" class="text-white text-decoration-none">Contacto</a></li>
+				<!-- Otros enlaces de contacto -->
+			  </ul>
+			</div>
+		  </div>
+		</div>
+	  </footer>
+
 </body>
 </html>
