--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -113,6 +113,11 @@
 			  <a class="nav-link" href="{% url 'guest_orders' %}">Todos los pedidos</a>
 		  </li>
 	 	 {% endif %}
+		 {% if user.is_authenticated and not user.is_staff%}
+		  <li class="nav-item">
+			<a class="nav-link" href="{% url 'customer_orders' user.customer.id %}">Mis pedidos</a>
+		  </li>
+		 {% endif %}
 		  {% if user.is_authenticated and not user.is_staff%}
 		  <li class="nav-item">
 			<a class="nav-link" href="/claims/claims">Reclamaciones <span class="sr-only"></span></a>
