--- a/store/templates/store/customers_orders.html
+++ b/store/templates/store/customers_orders.html
@@ -1,7 +1,9 @@
 {% extends 'store/main.html' %}
 {% block content %}
-    <h1>Customer Orders</h1>
+    <h1>Pedido de Usuario</h1>
+    
     <style>
+        /* Puedes dejar tu estilo personalizado aquí si es necesario */
         table, th, td {
             border: 1px solid black;
             border-collapse: collapse;
@@ -10,81 +12,103 @@
         }
     </style>
 
-    <div style="text-align: right;">
-        <h2>Status Codes:</h2>
-        <span>PL: Placed | </span>
-        <span>PR: Processing | </span>
-        <span>SH: Shipped | </span>
-        <span>DE: Delivered</span>
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Posibles Estados:</h2>
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-secondary">PL: En Almacen</button>
+                <button type="button" class="btn btn-secondary">PR: Procesando</button>
+                <button type="button" class="btn btn-secondary">SH: En Camino</button>
+                <button type="button" class="btn btn-secondary">DE: Entregado</button>
+            </div>
+        </div>
+        <div class="col-md-6 text-right">
+            <form method="get" class="form-inline">
+                <label class="mr-sm-2" for="order_by">PEDIDO por:</label>
+                <select class="form-control mr-sm-2" name="order_by" id="order_by" onchange="this.form.submit()">
+                    <option value="id">PEDIDO por ID</option>
+                    <option value="get_cart_total">Total más bajo</option>
+                    <option value="date_ordered">Fecha más antigua</option>
+                    <option value="-date_ordered">Fecha más reciente</option>
+                </select>
+                <label class="mr-sm-2" for="status">ESTADOS:</label>
+                <select class="form-control mr-sm-2" name="status" id="status" onchange="this.form.submit()">
+                    <option value="">Todos</option>
+                    <option value="PL">En Almacen</option>
+                    <option value="PR">Procesando</option>
+                    <option value="SH">En Camino</option>
+                    <option value="DE">Entregado</option>
+                </select>
+            </form>
+        </div>
     </div>
-    <form method="get">
-        <label for="order_by">Order by:</label>
-        <select name="order_by" id="order_by" onchange="this.form.submit()">
-            <option value="id">Order ID</option>
-            <option value="get_cart_total">Lowest Total</option>
-            <option value="date_ordered">Recent Date</option>
-            <option value="-date_ordered">Latest Date</option>
-        </select>
-        <label for="status">Status:</label>
-        <select name="status" id="status" onchange="this.form.submit()">
-            <option value="">All</option>
-            <option value="PL">Placed</option>
-            <option value="PR">Processing</option>
-            <option value="SH">Shipped</option>
-            <option value="DE">Delivered</option>
-        </select>
-    </form>
 
-    <table>
+    <table class="table table-bordered mt-4">
         <thead>
             <tr>
-                <th>Order ID</th>
-                <th>Status</th>
+                <th>ID PEDIDO</th>
+                <th>Estado</th>
                 <th>Total</th>
-                <th>Date Ordered</th>
-                <th>Complete</th>
-                <th>Tracking Number</th>
-                <th>Estimated Delivery Date</th>
-                <th>Products</th>
+                <th>Fecha del pedido</th>
+                <th>Completado pedido</th>
+                <th>Número de Seguimiento</th>
+                <th>Fecha Estimada de Entrega</th>
+                <th>Productos</th>
             </tr>
         </thead>
         <tbody>
-            {% for order in registered_orders %}
-            <tr>
-                <td>{{ order.id }}</td>
-                <td>{{ order.status }}</td>
-                <td>{{ order.get_cart_total }}</td>
-                <td>{{ order.date_ordered }}</td>
-                <td>{{ order.complete }}</td>
-                <td>{{ order.tracking_number|default:"No se ha asignado un número de seguimiento" }}</td>
-                <td>{{ order.estimated_delivery_date }}</td>
-                <td>
-                    <ul>
-                        {% for item in order.orderitem_set.all %}
-                            <li>{{ item.product.name }}: {{ item.quantity }}</li>
-                        {% endfor %}
-                    </ul>
-                </td>
-            </tr>
+            {% for order in page_obj %}
+                {% if order.transaction_id  %}
+                    <tr>
+                        <td><a href="{% url 'track_order' order.id %}">{{ order.id }}</a></td>
+                        <td>{{ order.status }}</td>
+                        <td>{{ order.get_cart_total }}</td>
+                        <td>{{ order.date_ordered }}</td>
+                        <td>{{ order.complete }}</td>
+                        <td>{{ order.transaction_id|default:"No se ha asignado un número de seguimiento" }}</td>
+                        <td>{{ order.estimated_delivery_date }}</td>
+                        <td>
+                            <ul>
+                                {% for item in order.orderitem_set.all %}
+                                    <li>{{ item.product.name }}: {{ item.quantity }}</li>
+                                {% endfor %}
+                            </ul>
+                        </td>
+                    </tr>
+                {% endif %}
             {% endfor %}
         </tbody>
     </table>
 
-    <div class="pagination">
-        <span class="step-links">
-            {% if page_obj.has_previous %}
-                <a href="?page=1">&laquo; first</a>
-                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-            {% endif %}
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="pagination mt-4">
+                <ul class="pagination">
+                    {% if page_obj.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page=1&order_by={{ request.GET.order_by }}&status={{ request.GET.status }}">&laquo; primera</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ page_obj.previous_page_number }}&order_by={{ request.GET.order_by }}&status={{ request.GET.status }}">anterior</a>
+                        </li>
+                    {% endif %}
 
-            <span class="current">
-                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-            </span>
+                    <li class="page-item disabled">
+                        <span class="page-link">
+                            Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}.
+                        </span>
+                    </li>
 
-            {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}">next</a>
-                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-            {% endif %}
-        </span>
+                    {% if page_obj.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ page_obj.next_page_number }}&order_by={{ request.GET.order_by }}&status={{ request.GET.status }}">siguiente</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}&order_by={{ request.GET.order_by }}&status={{ request.GET.status }}">última &raquo;</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
     </div>
 {% endblock content %}
