--- a/store/templates/store/store_main.html
+++ b/store/templates/store/store_main.html
@@ -1,23 +1,40 @@
 {% extends 'store/main.html' %}
 {% load static %}
 {% block content %}
-    <div class="row">
-        {% for product in products %}
-            <div class="col-lg-4">
-                <img class="thumbnail" src="{{product.imageURL}}">
-                <div class="box-element product">
-                    <h6><strong>{{product.name}}</strong></h6>
-                            <hr>
-                    <h6>Tipo: <strong>{{product.type}}</strong></h6>
-                    <hr>
-                    <h6>Fabricante: <strong>{{product.maker}}</strong></h6>
-                    <hr>
-                    <button data-product="{{product.id}}" data-action="add" data-url="{% url 'update_item' %}" class="btn btn-outline-secondary add-btn update-cart">Añadir al carrito</button>
-                    <a class="btn btn-outline-success" href="/store/product/{{product.id}}">Ver</a>    
-                    <h4 style="display: inline-block; float: right"><strong>{{product.price}}€</strong></h4>
-                </div>
+<div class="row">
+    {% for product in products %}
+        <div class="col-lg-4">
+            <img class="thumbnail {% if product.stock_no == 0 %}out-of-stock{% endif %}" src="{{product.imageURL}}">
+            <div class="box-element product {% if product.stock_no == 0 %}out-of-stock{% endif %}">
+                <h6><strong>{{product.name}}</strong></h6>
+                <hr>
+                <h6>Tipo: <strong>{{product.type}}</strong></h6>
+                <hr>
+                <h6>Fabricante: <strong>{{product.maker}}</strong></h6>
+                <hr>
+                <h6>Stock: <strong>{{product.stock_no}}</strong></h6>
+                <hr>
+                {% if product.stock_no == 0 %}
+                <strong>SIN STOCK&nbsp;&nbsp;&nbsp;</strong>
+                {% else %}
+                {% if product.stock_no > cartItems %}
+                <button data-product="{{product.id}}" data-action="add" data-url="{% url 'update_item' %}" class="btn btn-outline-secondary add-btn update-cart">Añadir al carrito</button>
+                {% else %}
+                <strong>SIN STOCK&nbsp;&nbsp;&nbsp;</strong>
+                {% endif %}
+                {% endif %}
+                <a class="btn btn-outline-success" href="/store/product/{{product.id}}">Ver</a>       
+                <h4 style="display: inline-block; float: right"><strong>{{product.price|floatformat:2}}€</strong></h4>
             </div>
-        {% endfor %}
-    </div>
+        </div>
+    {% endfor %}
+</div>
+<style>
+    /* Estilos para productos sin stock */
+    .out-of-stock {
+        opacity: 0.5; /* Reducir opacidad */
+        filter: grayscale(80%); /* Convertir a escala de grises */
+    }
+</style>
 
 {% endblock content %}
