--- a/claims/templates/claims/claim_create.html
+++ b/claims/templates/claims/claim_create.html
@@ -1,5 +1,5 @@
 {% extends 'claims/base_generic.html' %}
-
+{% block title %}Nueva reclamación{% endblock title %}
 {% block content %}
   <h1>Nueva reclamación</h1>
   <form method="POST">
