--- a/claims/templates/claims/claim_detail.html
+++ b/claims/templates/claims/claim_detail.html
@@ -1,5 +1,5 @@
 {% extends 'claims/base_generic.html' %}
-
+{% block title %}Detalles de reclamación{% endblock title %}
 {% block content %}
 <div class="container">
   <div class="row">
