--- a/claims/templates/claims/claim_detail_error.html
+++ b/claims/templates/claims/claim_detail_error.html
@@ -1,5 +1,5 @@
 {% extends 'claims/base_generic.html' %}
-
+{% block title %}Error{% endblock title %}
 {% block content %}
   <h1>Error</h1>
   <p>Solo el usuario que ha puesto la reclamación o un administrador pueden acceder.</p>
