--- a/claims/templates/claims/claim_limit_error.html
+++ b/claims/templates/claims/claim_limit_error.html
@@ -1,5 +1,5 @@
 {% extends 'claims/base_generic.html' %}
-
+{% block title %}Límite de reclamaciones{% endblock title %}
 {% block content %}
   <h1>Límite de reclamaciones alcanzado</h1>
   <p>Has alcanzado el límite de 3 reclamaciones diarias. Por favor, intentelo de nuevo mañana.</p>
