--- a/claims/templates/claims/claim_list.html
+++ b/claims/templates/claims/claim_list.html
@@ -1,5 +1,5 @@
 {% extends 'claims/base_generic.html' %}
-
+{% block title %}Lista de reclamaciones{% endblock title %}
 {% block content %}
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
   <h1>Mis reclamaciones</h1>
