--- a/claims/templates/claims/claim_update.html
+++ b/claims/templates/claims/claim_update.html
@@ -1,5 +1,5 @@
 {% extends 'claims/base_generic.html' %}
-
+{% block title %}Editar reclamación{% endblock title %}
 {% block content %}
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
   {% if request.user == claim.user %}
