--- a/claims/templates/claims/claim_delete.html
+++ b/claims/templates/claims/claim_delete.html
@@ -1,5 +1,5 @@
 {% extends 'claims/base_generic.html' %}
-
+{% block title %}Eliminar reclamación{% endblock title %}
 {% block content %}
 <div class="container">
   <div class="row">
